# simplecpp

./: CMakeLists.txt  simplecpp.cpp  simplecpp.h
